added input and add skill button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 </head>
 
 <body>
+    <main>
+        <h1>My Developer Skills</h1>
+        <ul>
+            <li><span></span>JavaScript</li>
+        </ul>
+        <input type="text">
+        <button>Add Skill</button>
+    </main>
 
 </body>
 
