finishes visual representation

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <main>
         <h1>My Developer Skills</h1>
         <ul>
-            <li><span></span>JavaScript</li>
+            <li><span>X</span> JavaScript (ES6)</li>
+            <li><span>X</span> Cascading Style Sheets (CSS3)</li>
+            <li><span>X</span> HyperText Markup Language (HTML5)</li>
         </ul>
         <input type="text">
-        <button>Add Skill</button>
+        <button>Add Skill</button><div class=""></div>
     </main>
 
 </body>
