adds removal of list items w remove and hide

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <main>
         <h1>My Developer Skills</h1>
         <ul>
-        
+
         </ul>
         <input type="text">
-        <button>Add Skill</button><div class=""></div>
+        <button>Add Skill</button>
     </main>
-
 </body>
 
 </html>
